<resources>
    <string name="app_name">FriendCalendar</string>
    <string name="mode_switch">Ansicht wechseln</string>
    <string name="dates_of_day">Termine am xx.yy.zzzz</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="google_login_icon">Login mit Google</string>
    <string name="fingerprint_switch_text">Fingerabdruck-Login</string>

    <!-- Strings for Settings -->
    <string name="settings_headline">Einstellungen</string>

    <string name="settings_notifications_switch">Benachrichtigungen</string>
    <string name="settings_notifications_image_description">Bild einer Benachrichtigungsglocke</string>

    <string name="preference_name">frcalSharedPrefs</string>
    <string name="first_run_preference_name">firstRun</string>
    <string name="notifications_preference_name">notificationsAllowed</string>
    <string name="fingerprint_preference_name">fingerprintSwitchState</string>
    <string name="google_preference_name">googleSignedIn</string>
    <string name="id_preference_name">notificationId</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="server_client_id">764959564302-kk5n95aabkm0sj9eae9n28l1neit61i9.apps.googleusercontent.com</string>
    <string name="calendar_headline">Mein Kalender</string>
    <string name="add_calendar_headline">Neuen Freund\nhinzufügen</string>
    <string name="add_calendar_mail_hint">E-Mail</string>
    <string name="add_date_btn">Speichern</string>
    <string name="add_date_headline">Neuer Termin</string>
    <string name="add_date_name_hint">Titel</string>
    <string name="add_date_name_day">Datum</string>
    <string name="add_date_from">09:00</string>
    <string name="add_date_duration_dash">-</string>
    <string name="add_date_to">10:00</string>
    <string name="add_date_description">Beschreibung</string>
    <string name="add_date_location">Ort</string>
    <string name="add_date_google_sync_text">Mit Google-Kalender synchronisieren</string>
    <string name="add_date_set_notif_text">Benachrichtigung 15min vor Termin</string>
    <string name="edit_date_headline">Termin bearbeiten</string>
    <string name="dlt_date_btn">Löschen</string>
    <string name="single_day_headline">Termine am dd.mm.yyyy</string>
    <string name="listitem_date_name">Termintitel</string>
    <string name="listitem_date_time">09:00 - 10:00</string>
    <string name="listitem_date_description">Beschreibung des Termins</string>
    <string name="listitem_date_location">Ort</string>

    <!-- Strings for Shortcuts -->
    <string name="add_date_shortcut_label_short">Termin erstellen</string>
    <string name="add_date_shortcut_label_long">Einen neuen Termin erstellen</string>

    <string name="add_date_shortcut_disabled_message">Leider können Sie keinen neuen Termin erstellen</string>

    <string name="add_calendar_shortcut_label_short">Freund hinzufügen</string>
    <string name="add_calendar_shortcut_label_long">Einen neuen Freund hinzufügen</string>

    <string name="add_calendar_shortcut_disabled_message">Leider können Sie keinen neuen Freund hinzufügen</string>

    <!-- Strings to determine, if app was newly opened, be it through the app icon, shortcuts or notifications -->
    <string name="newly_opened_extra_key">NewlyOpened</string>
    <string name="newly_opened_extra_value">True</string>
    <string name="newly_opened_action">android.intent.action.VIEW_LOCUS</string>

    <!-- Strings for FingerprintActivity -->
    <string name="intent_key">class</string>

    <string name="subtitle_fingerprint_activity">Öffnen der %1$s</string>
    <string name="subtitle_fingerprint_activity_class_not_found">App</string>
    <string name="subtitle_fingerprint_activity_no_intent_extra">CalendarActivity</string>

    <string name="fingerprint_image_description">Bild eines Fingerabdrucks</string>
    <string name="action_description_fingerprint">Drücken, zum Einloggen</string>
    <string name="fingerprint_alternative_button_text">Login</string>

    <string name="prompt_title">Einloggen, um die App zu nutzen</string>
    <string name="biometric_prompt_subtitle">Loggen Sie sich mit Ihrem Fingerabdruck ein</string>
    <string name="device_credential_prompt_subtitle">Loggen Sie sich mit Ihrem Muster, Passwort oder Ihrer PIN ein</string>

    <string name="fingerprint_error">Ein Fehler ist aufgetreten</string>
    <string name="fingerprint_redirection">Erfolgreicher Login, aber aufgrund eines Fehlers Umleitung zum Kalender</string>
    <string name="fingerprint_no_authentification_method_toast">Keine Authentifizierungsmethode eingerichtet</string>

    <string name="fingerprint_no_authentification_method_alert_dialog">Leider ist auf Ihrem Gerät keine Authentifizierungsmethode eingerichtet\nOhne diese können Sie die App nicht öffnen</string>
    <string name="fingerprint_no_authentification_method_alert_dialog_positive">Einrichten</string>
    <string name="fingerprint_no_authentification_method_alert_dialog_negative">Abbrechen</string>

    <!-- Strings for Notifications -->
    <string name="channel_id">default</string>
    <string name="channel_name">Standard Channel</string>
    <string name="channel_description">Dieser Channel ist der Standard für alle Benachrichtigungen bezüglich Kalenderereignissen</string>

    <string name="notifications_id_key">ID</string>
    <string name="notifications_notification_key">Notification</string>
    <string name="notifications_event_id_key">EventID</string>
    <string name="notifications_title_key">Title</string>
    <string name="notifications_time_key">Time</string>
    <string name="notifications_minutes_key">Minutes</string>
    <string name="notifications_close_key">Close</string>

    <string name="notification_description">Findet bald statt</string>

    <string name="notification_action_5">5 Minuten vorher noch einmal erinnern</string>
    <string name="notification_action_close">Schließen</string>

    <!-- Sync Calendars with Google Calendars -->
    <string name="sync_cal">Sync with GMail</string>

    <!-- Strings for Initialization -->
    <string name="notifications_initialization_subtitle">Möchten Sie Benachrichtigungen aktivieren?</string>
    <string name="notifications_initialization_description">Über Benachrichtigungen können Sie sich einige Minuten vor einem Termin an diesen erinnern lassen\nSie können Ihre Wahl jederzeit in den Einstellungen ändern</string>
    <string name="notifications_initialization_image_description">Bild einer Glocke als Symbol von Benachrichtigungen</string>
    <string name="notifications_initialization_agree_button">Benachrichtigungen aktivieren</string>
    <string name="notifications_initialization_disagree_button">Ohne Benachrichtigungen fortfahren</string>
    <string name="notifications_initialization_alert_dialog">Ohne Benachrichtigungen fehlen der App einige elementare Eigenschaften\nMöchten Sie dennoch fortfahren?</string>
    <string name="notifications_initialization_alert_dialog_positive">Ohne Benachrichtigungen fortfahren</string>
    <string name="notifications_initialization_alert_dialog_negative">Benachrichtigungen einrichten</string>

    <string name="fingerprint_initialization_subtitle">Möchten Sie eine Fingerabdrucksperre einrichten?</string>
    <string name="fingerprint_initialization_description">Mithilfe der Fingerabdrucksperre können Sie Ihre Daten vor unerwünschten fremden Eingriffen schützen\nSie können Ihre Wahl jederzeit in den Einstellungen ändern</string>
    <string name="fingerprint_initialization_image_description">Bild eines Fingerabdrucks</string>
    <string name="fingerprint_initialization_agree_button">Fingerabdrucksperre einrichten</string>
    <string name="fingerprint_initialization_disagree_button">Keine Fingerabdrucksperre einrichten</string>

    <string name="google_initialization_subtitle">Möchten Sie Ihr Google-Konto verknüpfen?</string>
    <string name="google_initialization_description">Wenn Sie Ihr Google-Konto verknüpfen, können Sie leichter Ihre Termine synchronisieren und mit Freunden teilen\nSie können Ihre Wahl jederzeit in den Einstellungen ändern</string>
    <string name="google_initialization_image_description">Unsichtbares Bild eines Kalendars</string>
    <string name="google_initialization_agree_button">Bei Google anmelden</string>
    <string name="google_initialization_disagree_button">Nicht mit Google-Konto verknüpfen</string>

    <!-- Strings for Sharing -->
    <string name="choose_friends_hint">Teilen mit …</string>
    <string name="private_date_set">privater Termin</string>
    <string name="public_date_set">mit allen Freunden teilen</string>

    <!-- Strings for DateActivity -->
    <string name="extra_event_key">SELECTED_EVENT</string>
</resources>