<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_date_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/edit_date_headline"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_date_name_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_date_headline" />

    <EditText
        android:id="@+id/edit_date_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_date_name_day"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/edit_date_title" />

    <LinearLayout
        android:id="@+id/edit_date_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_date_day">

        <EditText
            android:id="@+id/edit_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/add_date_from"
            android:inputType="time"
            android:textAlignment="center"
            app:layout_constraintRight_toLeftOf="@id/edit_date_to" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleX="2"
            android:scaleY="2"
            android:text="@string/add_date_duration_dash" />

        <EditText
            android:id="@+id/edit_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/add_date_to"
            android:inputType="time"
            android:textAlignment="center"
            app:layout_constraintLeft_toRightOf="@id/edit_date_from" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_date_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_date_description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_date_duration" />

    <EditText
        android:id="@+id/edit_date_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/add_date_location"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_date_description" />

    <TextView
        android:id="@+id/edit_date_choose_friends_multiselect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/choose_friends_background"
        android:drawablePadding="16dp"
        android:hint="@string/choose_friends_hint"
        android:padding="12dp"
        app:drawableRightCompat="@android:drawable/arrow_down_float"
        app:layout_constraintTop_toBottomOf="@id/edit_date_location" />

    <LinearLayout
        android:id="@+id/edit_date_sync_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_date_choose_friends_multiselect">

        <CheckBox
            android:id="@+id/edit_date_google_sync_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:checked="true"
            android:ems="10" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="2"
            android:text="@string/add_date_google_sync_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_date_notif_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_date_sync_check">

        <CheckBox
            android:id="@+id/edit_date_set_notif_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:checked="true"
            android:ems="10" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.64"
            android:text="@string/add_date_set_notif_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_or_delete_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_date_notif_check"
        tools:visibility="visible">

        <Button
            android:id="@+id/edit_date_save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/add_date_btn" />

        <Button
            android:id="@+id/edit_date_delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/dlt_date_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>